--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "Advanced version of warsawjs workshop application",
     "main": "main.js",
     "scripts": {
-        "build": "webpack --watch",
+        "build": "webpack",
+        "watch": "webpack --watch",
         "clear": "rm -rf dist/",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
@@ -23,6 +24,10 @@
         "babel-loader": "^6.2.9",
         "babel-preset-es2015": "^6.18.0",
         "babel-preset-stage-0": "^6.16.0",
+        "css-loader": "^0.26.1",
+        "raw-loader": "^0.5.1",
+        "sass-loader": "^4.0.2",
+        "style-loader": "^0.13.1",
         "webpack": "^1.14.0"
     }
 }
